# mb-base-app

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  chapter_1.html  deny.toml  print.html  release.toml  searchindex.js  searchindex.json  settings.toml  sitemap.txt  sitemap.xml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  post-release.yml
rustdoc/: crates.js  help.html  search-index.js  settings.html  source-files.js
rustdoc/mb_base_app/: all.html  fn.add.html  index.html
rustdoc/src/mb_base_app/: lib.rs.html
site/: book.toml
site/src/: chapter_1.md
src/: lib.rs  logging.rs  main.rs  settings.rs
src/grpc/: mod.rs
src/rest/: mod.rs
