[package]
name = "mb-base-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Murilo Ijanc' <mbsd@m0x.ru>"]
readme = "README.md"
repository = "https://github.com/microbio-rs/mb-base-app"
documentation = "https://microbio.rs"
description = """
repository that will be used as a base for the organization's applications.
"""

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
strip = true

[dependencies]

[[bin]]
name = "mb-base-app"
path = "src/main.rs"
