[package]
name = "mb-base-app"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Murilo Ijanc' <mbsd@m0x.ru>"]
readme = "README.md"
repository = "https://github.com/microbio-rs/mb-base-app"
documentation = "https://microbio.rs"
description = """
repository that will be used as a base for the organization's applications.
"""

[package.metadata.release]
pre-release-replacements = [
  # {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/microbio-rs/mb-base-app/compare/{{tag_name}}...HEAD", exactly=1},
]

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
strip = true

[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"

[dependencies]

[[bin]]
name = "mb-base-app"
path = "src/main.rs"
