[package]
name = "mb-base-app"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Murilo Ijanc' <mbsd@m0x.ru>"]
readme = "README.md"
repository = "https://github.com/microbio-rs/mb-base-app"
documentation = "https://microbio.rs"
description = """
repository that will be used as a base for the organization's applications.
"""

[package.metadata.release]
pre-release-replacements = [
  # {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/microbio-rs/mb-base-app/compare/{{tag_name}}...HEAD", exactly=1},
]

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
strip = true

[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"

[dependencies]
axum = { version = "0.6.18" }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["net", "rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "mb-base-app"
path = "src/main.rs"

[dev-dependencies]
hyper = { version = "0.14.26", features = ["full"] }
mime = "0.3.17"
tower = { version = "0.4.13", features = ["util"] }
